# mech_code

./: .gitmodules  README.md
CG/: Makefile  sample-clr  sample-cube.c  sample-double.c  sample-teapot
CG/templates/: sample-clr.c  sample-cube.c  sample-hello.c  sample-teapot.c
Class/Manifacture/: assignment05-02.txt
Class/System2/: ex9.m
Class/other/: bio-nie.md  bio0703.md
Ex2/Advanced/: Makefile  clock.py  concept.md  empty.sh  pyproject.toml  run.sh  test1.py  アドバンストプログラミング.md
Ex2/Advanced/clock/: clock.ino  sketch.yaml
Ex2/Advanced/print/: ClockAdapter v9.fpp  ClockAdapter v9.gx  ClockAdapter v9.stl  ClockAdapter v9_5m.fpp  ClockAdapter v9_5m.gx  StepMotorMount v3.stl  StepMotorMount v4.stl  StepMotorMount v5.gx  StepMotorMount v5.stl  StepMotorMount v7.stl  StepMotorMount v8.gx  StepMotorMount v8.stl  clockAdapter.stl
Ex2/Advanced/test/: rotate_test.py  serial_test.py  test.ino
Ex2/AirCon/: 13班_再換算.xlsx  13班＿データ.xlsx  Makefile  aircon.py  prob2.py  report.md
Ex2/CG/: sample-clr.c  sample-cube  sample-double  sample-hello  sample-hello.c  sample-teapot.c
Ex2/ProgramEx1/: ex1.c  ex2  ex2.c  main.c
Ex2/bship/: :  bship.md
Ex2/keisanki/: Makefile  (+10 more)
ProgramEx1/: ex1  main
SE/: pyproject.toml
Soft2/: debug-fact  fact.c  hello  test0.c
keisanki/: Makefile.sample2  sample10.py  sample2  sample3  sample4  sample4_dnn.cpp  sample4_dnn.py  sample5  sample5.py  sample6.py  sample7.py
multithread/: calcpi  forloop_omp  forloop_omp.c  hello_omp.c  matrix  matrix-single  matrix.c  section  section.c  sum_omp_critical.c
numerical/: untitled.mlx
(+2396 files in other folders)
