[tool.poetry]
name = "advanced"
version = "0.1.0"
description = ""
authors = ["yosukemaeda <yoke1390@outlook.jp>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytk = "^0.0.2.1"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
